adicionei páginas e interação js e outros

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     </li>
 
                     <li>
-                        <a href=""><span>01</span> DESTINATION</a>
+                        <a href="./destination.html"><span>01</span> DESTINATION</a>
                     </li>
 
                     <li>
@@ -55,7 +55,7 @@
         </div>
 
         <div class="button-area">
-            <button>EXPLORE</button>
+            <button onclick="location.href='./destination.html'">EXPLORE</button>
         </div>
     </main>    
 </body>
