adicionei páginas, adicionei interação js e outros

--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
                 <div class="header-design-line"></div>
 
                 <ul>
-                    <li>
+                    <li class="active-page">
                         <a href=""><span>00</span> HOME</a>
                     </li>
 
                     <li>
-                        <a href="./destination.html"><span>01</span> DESTINATION</a>
+                        <a href="./src/html/destination.html"><span>01</span> DESTINATION</a>
                     </li>
 
                     <li>
-                        <a href=""><span>02</span> CREW</a>
+                        <a href="./src/html/crew.html"><span>02</span> CREW</a>
                     </li>
 
                     <li>
-                        <a href=""><span>03</span> TECHNOLOGY</a>
+                        <a href="./src/html/technology.html"><span>03</span> TECHNOLOGY</a>
                     </li>
                 </ul>
             </nav>
@@ -55,8 +55,8 @@
         </div>
 
         <div class="button-area">
-            <button onclick="location.href='./destination.html'">EXPLORE</button>
+            <button onclick="location.href='./src/html/destination.html'">EXPLORE</button>
         </div>
-    </main>    
+    </main>
 </body>
 </html>
