adicionei um pouco mais de responsividade

--- a/src/html/crew.html
+++ b/src/html/crew.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="../css/root.css">
     <link rel="stylesheet" href="../css/crew.css">
 
-    <title>Document</title>
+    <link rel="shortcut icon" href="../images/spacetourism-favicon.jpg" type="image/x-icon">
+
+    <title>Space Tourism - Frontend Mentor</title>
 </head>
 
 <body>
