--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="./src/css/root.css">
     <link rel="stylesheet" href="./src/css/home.css">
 
-    <title>Document</title>
+    <link rel="shortcut icon" href="./src/images/spacetourism-favicon.jpg" type="image/x-icon">
+
+    <title>Space Tourism - Frontend Mentor</title>
 </head>
 
 <body>
