--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" href="./src/css/root.css">
+    <link rel="stylesheet" href="./src/css/menu.css">
     <link rel="stylesheet" href="./src/css/home.css">
 
     <link rel="shortcut icon" href="./src/images/spacetourism-favicon.jpg" type="image/x-icon">
