--- a/src/html/destination.html
+++ b/src/html/destination.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" href="../css/root.css">
+    <link rel="stylesheet" href="../css/menu.css">
     <link rel="stylesheet" href="../css/destination.css">
 
     <link rel="shortcut icon" href="../images/spacetourism-favicon.jpg" type="image/x-icon">
