add respons destiny, ort correct, menu respons

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     SO, YOU WANT TO TRAVEL TO
                 </p>
     
-                <p class="main-text-tittle">
+                <p class="main-text-title">
                     SPACE
                 </p>
     
