--- a/src/html/destination.html
+++ b/src/html/destination.html
@@ -42,7 +42,7 @@
         </header>
 
         <div class="image-area">
-            <p class="destination-tittle">
+            <p class="page-title">
                 <span>01</span> PICK YOUR DESTINATION
             </p>
 
@@ -77,7 +77,7 @@
             </nav>
 
             <div class="destination-infos-container moon-infos">
-                <P class="destination-tittle">MOON</P>
+                <P class="destination-title">MOON</P>
 
                 <p class="destination-text">
                     See our planet as you’ve never seen it before. A perfect relaxing trip away to help regain perspective and come back refreshed. While you’re there, take in some history by visiting the Luna 2 and Apollo 11 landing sites.
@@ -97,7 +97,7 @@
             </div>
 
             <div class="destination-infos-container mars-infos">
-                <P class="destination-tittle">MARS</P>
+                <P class="destination-title">MARS</P>
 
                 <p class="destination-text">
                     Don’t forget to pack your hiking boots. You’ll need them to tackle Olympus Mons, the tallest planetary mountain in our solar system. It’s two and a half times the size of Everest!
@@ -117,7 +117,7 @@
             </div>
 
             <div class="destination-infos-container europa-infos">
-                <P class="destination-tittle">EUROPA</P>
+                <P class="destination-title">EUROPA</P>
 
                 <p class="destination-text">
                     The smallest of the four Galilean moons orbiting Jupiter, Europa is a winter lover’s dream. With an icy surface, it’s perfect for a bit of ice skating, curling, hockey, or simple relaxation in your snug wintery cabin.
@@ -137,7 +137,7 @@
             </div>
 
             <div class="destination-infos-container titan-infos">
-                <P class="destination-tittle">TITAN</P>
+                <P class="destination-title">TITAN</P>
 
                 <p class="destination-text">
                     The only moon known to have a dense atmosphere other than Earth, Titan is a home away from home (just a few hundred degrees colder!). As a bonus, you get striking views of the Rings of Saturn.
