add responsividade tablet no technology

--- a/src/html/technology.html
+++ b/src/html/technology.html
@@ -46,6 +46,26 @@
             <span>03</span> SPACE LAUNCH 101
         </p>
         
+        <section class="img-container">
+            <picture class="vehicle-img">
+                <source srcset="../images/technology/image-launch-vehicle-landscape.jpg" media="(max-width: 50rem)" alt="launch vehicle">
+
+                <img src="../images/technology/image-launch-vehicle-portrait.jpg" alt="launch vehicle">
+            </picture>
+
+            <picture class="spaceport-img">
+                <source srcset="../images/technology/image-spaceport-landscape.jpg" media="(max-width: 50rem)" alt="spaceport">
+
+                <img src="../images/technology/image-spaceport-portrait.jpg" alt="spaceport">
+            </picture>
+
+            <picture class="capsule-img">
+                <source srcset="../images/technology/image-space-capsule-landscape.jpg" media="(max-width: 50rem)" alt="space capsule">
+
+                <img src="../images/technology/image-space-capsule-portrait.jpg" alt="space capsule">
+            </picture>
+        </section>
+
         <nav class="navigation-buttons">
             <div class="active-button">1</div>
 
@@ -90,14 +110,6 @@
                     </p>
                 </li>
             </ul>
-        </section>
-        
-        <section class="img-container">
-            <img src="../images/technology/image-launch-vehicle-portrait.jpg" alt="launch vehicle" class="vehicle-img">
-
-            <img src="../images/technology/image-spaceport-portrait.jpg" alt="spaceport" class="spaceport-img">
-
-            <img src="../images/technology/image-space-capsule-portrait.jpg" alt="space capsule" class="capsule-img">
         </section>
     </main>
  
