adicionando menu burger

--- a/src/html/crew.html
+++ b/src/html/crew.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/menu.css">
     <link rel="stylesheet" href="../css/crew.css">
 
-    <link rel="shortcut icon" href="../images/spacetourism-favicon.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/icons/spacetourism-favicon.jpg" type="image/x-icon">
 
     <title>Space Tourism - Frontend Mentor</title>
 </head>
@@ -16,7 +16,7 @@
 <body>
     <main>
         <header>
-            <img src="../images/header-icon.png" alt="logo" class="logo">
+            <img src="../images/icons/header-icon.png" alt="logo" class="logo">
 
             <nav>
                 <div class="header-design-line"></div>
