--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./src/css/menu.css">
     <link rel="stylesheet" href="./src/css/home.css">
 
-    <link rel="shortcut icon" href="./src/images/spacetourism-favicon.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./src/images/icons/spacetourism-favicon.jpg" type="image/x-icon">
 
     <title>Space Tourism - Frontend Mentor</title>
 </head>
@@ -16,7 +16,7 @@
 <body>
     <main>
         <header>
-            <img src="./src/images/header-icon.png" alt="logo" class="logo">
+            <img src="./src/images/icons/header-icon.png" alt="logo" class="logo">
 
             <nav>
                 <div class="header-design-line"></div>
@@ -39,6 +39,12 @@
                     </li>
                 </ul>
             </nav>
+
+            <img src="./src/images/icons/icon-hamburger.svg" alt="menu icon" class="menu-burger-img">
+
+            <div class="menu-burger-active-page">
+
+            </div>
         </header>
 
         <div class="main-text-area">
