--- a/src/html/technology.html
+++ b/src/html/technology.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/menu.css">
     <link rel="stylesheet" href="../css/technology.css">
 
-    <link rel="shortcut icon" href="../images/spacetourism-favicon.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/icons/spacetourism-favicon.jpg" type="image/x-icon">
 
     <title>Space Tourism - Frontend Mentor</title>
 </head>
@@ -17,7 +17,7 @@
     <main>
         
         <header>
-                <img src="../images/header-icon.png" alt="logo" class="logo">
+                <img src="../images/icons/header-icon.png" alt="logo" class="logo">
         
                 <nav>
                     <div class="header-design-line"></div>
