--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header>
             <img src="./src/images/icons/header-icon.png" alt="logo" class="logo">
 
-            <nav>
+            <nav class="menu-navigation">
                 <div class="header-design-line"></div>
 
                 <ul>
@@ -42,9 +42,25 @@
 
             <img src="./src/images/icons/icon-hamburger.svg" alt="menu icon" class="menu-burger-img">
 
-            <div class="menu-burger-active-page">
+            <nav class="menu-burger-navigation">
+                <ul>
+                    <li>
+                        <a href=""><span>00</span> HOME</a>
+                    </li>
 
-            </div>
+                    <li>
+                        <a href="./src/html/destination.html"><span>01</span> DESTINATION</a>
+                    </li>
+
+                    <li>
+                        <a href="./src/html/crew.html"><span>02</span> CREW</a>
+                    </li>
+
+                    <li>
+                        <a href="./src/html/technology.html"><span>03</span> TECHNOLOGY</a>
+                    </li>
+                </ul>
+            </nav>
         </header>
 
         <div class="main-text-area">
@@ -67,5 +83,7 @@
             <button onclick="location.href='./src/html/destination.html'">EXPLORE</button>
         </div>
     </main>
+
+    <script src="./src/js/menu-buger.js"></script>
 </body>
 </html>
