--- a/src/html/destination.html
+++ b/src/html/destination.html
@@ -18,7 +18,7 @@
         <header>
             <img src="../images/icons/header-icon.png" alt="logo" class="logo">
 
-            <nav>
+            <nav class="menu-navigation">
                 <div class="header-design-line"></div>
 
                 <ul>
@@ -27,6 +27,28 @@
                     </li>
 
                     <li class="active-page">
+                        <a href="./destination.html"><span>01</span> DESTINATION</a>
+                    </li>
+
+                    <li>
+                        <a href="./crew.html"><span>02</span> CREW</a>
+                    </li>
+
+                    <li>
+                        <a href="./technology.html"><span>03</span> TECHNOLOGY</a>
+                    </li>
+                </ul>
+            </nav>
+
+            <img src="../images/icons/icon-hamburger.svg" alt="menu icon" class="menu-burger-img">
+
+            <nav class="menu-burger-navigation">
+                <ul>
+                    <li>
+                        <a href="../../index.html"><span>00</span> HOME</a>
+                    </li>
+
+                    <li>
                         <a href="./destination.html"><span>01</span> DESTINATION</a>
                     </li>
 
@@ -158,5 +180,6 @@
         </div>
     </main>
     
+    <script src="../js/menu-buger.js"></script>
     <script type="module" src="../js/destination.js"></script>
 </body>
