--- a/src/html/technology.html
+++ b/src/html/technology.html
@@ -65,25 +65,16 @@
         <p class="page-prelude-title">
             <span>03</span> SPACE LAUNCH 101
         </p>
-        
+       
         <section class="img-container">
-            <picture class="vehicle-img">
-                <source srcset="../images/technology/image-launch-vehicle-landscape.jpg" media="(max-width: 50rem)" alt="launch vehicle">
+            <div class="vehicle-img">
+            </div>
 
-                <img src="../images/technology/image-launch-vehicle-portrait.jpg" alt="launch vehicle">
-            </picture>
+            <div class="spaceport-img">
+            </div>
 
-            <picture class="spaceport-img">
-                <source srcset="../images/technology/image-spaceport-landscape.jpg" media="(max-width: 50rem)" alt="spaceport">
-
-                <img src="../images/technology/image-spaceport-portrait.jpg" alt="spaceport">
-            </picture>
-
-            <picture class="capsule-img">
-                <source srcset="../images/technology/image-space-capsule-landscape.jpg" media="(max-width: 50rem)" alt="space capsule">
-
-                <img src="../images/technology/image-space-capsule-portrait.jpg" alt="space capsule">
-            </picture>
+            <div class="capsule-img">
+            </div>
         </section>
 
         <nav class="navigation-buttons">
