--- a/src/html/destination.html
+++ b/src/html/destination.html
@@ -23,7 +23,7 @@
 
                 <ul>
                     <li>
-                        <a href="../../index.html"><span>00</span> HOME</a>
+                        <a href="../../home.html"><span>00</span> HOME</a>
                     </li>
 
                     <li class="active-page">
@@ -45,7 +45,7 @@
             <nav class="menu-burger-navigation">
                 <ul>
                     <li>
-                        <a href="../../index.html"><span>00</span> HOME</a>
+                        <a href="../../home.html"><span>00</span> HOME</a>
                     </li>
 
                     <li>
@@ -181,5 +181,5 @@
     </main>
     
     <script src="../js/menu-buger.js"></script>
-    <script type="module" src="../js/destination.js"></script>
+    <script type="module" src="../js/pages-js/destination.js"></script>
 </body>
