integrando com github pages

--- a/src/html/crew.html
+++ b/src/html/crew.html
@@ -150,6 +150,6 @@
         </section>
     </main>
     
-    <script src="../js/menu-buger.js"></script>
-    <script type="module" src="../js/pages-js/crew.js"></script>
+    <script src="../js/menu-buger"></script>
+    <script type="module" src="../js/pages-js/crew"></script>
 </body>
