--- a/src/html/destination.html
+++ b/src/html/destination.html
@@ -180,6 +180,6 @@
         </div>
     </main>
     
-    <script src="../js/menu-buger.js"></script>
-    <script type="module" src="../js/pages-js/destination.js"></script>
+    <script src="../js/menu-buger"></script>
+    <script type="module" src="../js/pages-js/destination"></script>
 </body>
