corrigi erro de digitação

--- a/index.html
+++ b/index.html
@@ -84,6 +84,6 @@
         </div>
     </main>
 
-    <script src="./src/js/menu-buger.js"></script>
+    <script src="./src/js/menu-burger.js"></script>
 </body>
 </html>
