correção de type errors para githubpages

--- a/src/html/crew.html
+++ b/src/html/crew.html
@@ -150,6 +150,6 @@
         </section>
     </main>
     
-    <script src="../js/menu-buger.js"></script>
+    <script src="../js/menu-burger.js"></script>
     <script type="module" src="../js/pages-js/crew.js"></script>
 </body>
