--- a/src/html/technology.html
+++ b/src/html/technology.html
@@ -124,6 +124,6 @@
         </section>
     </main>
  
-    <script src="../js/menu-buger.js"></script>
+    <script src="../js/menu-burger.js"></script>
     <script type="module" src="../js/pages-js/technology.js"></script>
 </body>
