--- a/src/html/crew.html
+++ b/src/html/crew.html
@@ -23,7 +23,7 @@
 
                 <ul>
                     <li>
-                        <a href="../../index.html"><span>00</span> HOME</a>
+                        <a href="../../home.html"><span>00</span> HOME</a>
                     </li>
 
                     <li>
@@ -45,7 +45,7 @@
             <nav class="menu-burger-navigation">
                 <ul>
                     <li>
-                        <a href="../../index.html"><span>00</span> HOME</a>
+                        <a href="../../home.html"><span>00</span> HOME</a>
                     </li>
 
                     <li>
